[package]
name = "c0i"
version = "0.1.2"
authors = ["Lyzh <enterindex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "c0i"
path = "src/main.rs"

[[bin]]
name = "c047"
path = "src/eval47/main.rs"

[lib]
name = "c0ilib"
path = "src/lib.rs"

[[example]]
name = "free_variables"
path = "examples/free_variables.rs"

[dependencies]
build-time = "0.1.1"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1" }
sexpr_ir = { git="https://github.com/imlyzh/sexpr_ir" }
pr47 = { git="https://github.com/Pr47/Pr47", default-features=false, features=[
    "al31f",
    "al31f-builtin-ops",
    "optimized-rtlc",
    "async",
    "async-tokio"
] }
xjbutil = { version="0.7.0", default-features=false, features=[
    "slice-arena",
    "either",
    "makro",
    "korobka",
    "value",
    "value-serde"
] }
