[package]
name = "c0i"
version = "0.1.2"
authors = ["Lyzh <enterindex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "c0i"
path = "src/main.rs"
required-features = ["c0i"]

[[bin]]
name = "c047"
path = "src/eval47/main.rs"
required-features = ["c047"]

[[example]]
name = "free_variables"
path = "examples/free_variables.rs"

[features]
default = ["c0i"]
c0i = []
c047 = ["pr47", "xjbutil", "build-time", "tokio", "serde", "serde_json"]

[dependencies]
sexpr_ir = { git="https://github.com/imlyzh/sexpr_ir" }

build-time = { optional = true, version = "0.1" }
serde = { optional = true, version = "1", features = ["derive"] }
serde_json = { optional = true, version = "1" }
tokio = { optional = true, version = "1", features = ["fs"] }

    [dependencies.pr47]
    optional=true
    git="https://github.com/Pr47/Pr47"
    rev="cda4df5cb090e3e9a562524ed7c76e0dc76972d8"
    default-features=false
    features=[
        "al31f",
        "al31f-builtin-ops",
        "optimized-rtlc",
        "async",
        "async-tokio",
        "std47"
    ]

    [dependencies.xjbutil]
    optional=true
    version="0.7.0"
    default-features=false
    features=[
        "slice-arena",
        "either",
        "makro",
        "korobka",
        "value",
        "value-serde",
        "rand"
    ]
